<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    tools:layout_editor_absoluteX="0dp"
    tools:layout_editor_absoluteY="-20dp">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="241dp"
        android:layout_height="79dp"
        android:layout_marginTop="136dp"
        android:onClick="visitOrbitaxWebiste"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/orbitax" />

    <TextView
        android:id="@+id/tvName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="visitUserWebsite"
        android:text="@string/name"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="#000000"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        app:layout_constraintVertical_bias="0.104" />

    <TextView
        android:id="@+id/tvDesignation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/designation"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="#000000"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@id/tvName"
        app:layout_constraintVertical_bias="0.102" />

    <TableRow
        android:id="@+id/mobile_row"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="onClickMobileNumber"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.506"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@id/tvDesignation"
        app:layout_constraintVertical_bias="0.111">

        <ImageView
            android:contentDescription="@string/call"
            app:srcCompat="@drawable/ic_baseline_call_24"
            tools:layout_editor_absoluteX="121dp"
            tools:layout_editor_absoluteY="357dp" />

        <TextView
            android:id="@+id/tvMobile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mobile_number"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColor="#000000"
            tools:layout_editor_absoluteX="145dp"
            tools:layout_editor_absoluteY="357dp" />
    </TableRow>

    <TableRow
        android:id="@+id/email_row"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="onClickEmail"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@id/mobile_row"
        app:layout_constraintVertical_bias="0.104">

        <ImageView
            android:contentDescription="@string/email"
            app:srcCompat="@drawable/ic_baseline_email_24"
            tools:layout_editor_absoluteX="89dp"
            tools:layout_editor_absoluteY="399dp" />

        <TextView
            android:id="@+id/tvEmail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/email_id"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColor="#000000"
            tools:layout_editor_absoluteX="113dp"
            tools:layout_editor_absoluteY="399dp" />
    </TableRow>


    <TextView
        android:id="@+id/tvCompany"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/orbitax_bangladesh_limited"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="#000000"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.531"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@id/mobile_row"
        app:layout_constraintVertical_bias="0.462" />

    <TableRow
        android:id="@+id/address_row"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="onClickAddress"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.638"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@id/tvCompany"
        app:layout_constraintVertical_bias="0.241">

        <ImageView
            android:contentDescription="@string/address"
            app:srcCompat="@drawable/ic_baseline_location_on_24"
            tools:layout_editor_absoluteX="23dp"
            tools:layout_editor_absoluteY="572dp" />

        <TextView
            android:id="@+id/tvAddress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/address_line"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColor="#000000"
            tools:layout_editor_absoluteX="47dp"
            tools:layout_editor_absoluteY="572dp" />
    </TableRow>


</androidx.constraintlayout.widget.ConstraintLayout>